# adcorr

./: .gitattributes  .gitignore  .gitremotes  .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  pyproject.toml  requirements.txt  setup.cfg  switcher.json  versions.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: code.yml  docs.yml  linkcheck.yml
0.1.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
0.1.0/.doctrees/: environment.pickle  explanations.doctree  tutorials.doctree
0.1.0/_modules/: index.html
0.1.0/reference/: api.html  contributing.html
0.1.0/tutorials/: installation.html
0.2.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.2.0/.doctrees/: environment.pickle  explanations.doctree
0.2.0/_modules/: index.html
0.2.0/_sources/: explanations.rst.txt
0.2.0/explanations/: correction-implementations.html
0.2.0/reference/: api.html  contributing.html
0.2.0/tutorials/: i22_corrections.html  installation.html
0.2.1/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
0.2.1/.doctrees/: environment.pickle  genindex.doctree
0.2.1/_modules/: index.html
0.2.1/developer/: index.html
0.2.1/user/: index.html
dependabot_github_actions_softprops_action-gh-release-2/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
dependabot_github_actions_softprops_action-gh-release-2/.doctrees/: index.doctree
docs/: conf.py  explanations.rst  reference.rst  tutorials.rst
docs/reference/: api.rst
garryod-update-skeleton/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
main/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
tests/: conftest.py  test_angular_efficiency.py  test_background_subtraction.py  test_boilerplate_removed.py  test_dark_current.py  test_deadtime.py  test_displaced_volume.py  test_flatfield.py  test_flux_and_transmission.py  test_frame_average.py  test_frame_time.py  test_masking.py  test_polarization.py  test_self_absorbtion.py  test_self_absorption.py  test_solid_angle.py  test_thickness.py
(+307 files in other folders)
